# Gov-Assist-AI

./: AGENT_DESIGN.md  ARCHITECTURE.md  CRAWLING_ARCHITECTURE.md  DECISIONS.md  PROJECT_FLOW.md  README.md  chainlit_app.py  pyproject.toml  requirements.txt
agents/: __init__.py  action_plan_agent.py  eligibility_reasoning_agent.py  grounding_agent.py  hybrid_retrieval_agent.py  intent_agent.py  profile_agent.py  research_planner_agent.py  state.py  web_research_agent.py  workflow.py
crawler/: __init__.py  content_extractor.py  crawler.py  dynamic_fetcher.py  html_cleaner.py  metadata_extractor.py  page_discovery.py  scheduler.py
evaluation/: metrics.py
llm/: __init__.py  qwen_client.py
models/: __init__.py  scheme.py
retrieval/: __init__.py  chroma_store.py  chunking.py  embeddings.py  hybrid_retriever.py  indexer.py  vector_store.py
scripts/: check_qwen.py  ingest_myscheme.py
services/: __init__.py  rag_service.py
storage/: __init__.py  json_store.py
