[project]
name = "gov-assist-ai"
version = "0.1.0"
description = "Agentic RAG assistant for Indian government scheme discovery using myScheme crawling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "chainlit>=2.0.0",
    "chromadb>=0.5.0",
    "crawl4ai>=0.4.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "numpy>=1.26.0",
    "playwright>=1.45.0",
    "pydantic>=2.7.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.uv]
package = false
